--- a/composer.json
+++ b/composer.json
@@ -57,5 +57,9 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    
+    "conflict": {
+        "psr/container": "1.1"
+    }
 }
