--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,8 @@
     }],
     "env": {
         "APP_ENV": "production",
-        "APP_DEBUG": "true",
-        "APP_URL": "https://my-portfolio-git-main-canhassi12.vercel.app",
+        "APP_DEBUG": "false",
+        "APP_URL": "https://my-portfolio-green-ten.vercel.app",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
